--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-three/drei": "^9.119.0",
     "@react-three/fiber": "^8.17.10",
     "d3": "^7.9.0",
+    "flowbite-react": "^0.10.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "three": "^0.171.0"
