--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "flowbite-react": "^0.10.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "three": "^0.171.0"
   },
   "devDependencies": {
